--- a/Categoris/vegetables/vegetables.css
+++ b/Categoris/vegetables/vegetables.css
@@ -14,8 +14,6 @@ body {
   width: 100%;
   height: 100vh;
   background-color: #F6F5F5;
-  position: relative;
-  overflow: hidden;
 }
 
 section {
@@ -94,25 +92,112 @@ section {
   display: flex;
   font-size: 0.9rem;
   font-weight: 300;
+  color: var(--text-secondary_color);
+}
+.vegetables-container .subjects-container .subject-container .active {
+  color: rgba(88, 34, 189, 0.808);
+  font-weight: 600;
 }
 .vegetables-container .subjects-container .active {
-  color: #6C0EE4;
+  color: #533975;
   background-color: #E2CBFF;
 }
 .vegetables-container .products-container {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  margin-top: 20px;
 }
 .vegetables-container .products-container .product-container {
+  margin-top: 25px;
   display: flex;
-  margin: 5px;
+  width: 100%;
 }
 .vegetables-container .products-container .product-container .img-container {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex: 1;
+  width: 50%;
+}
+.vegetables-container .products-container .product-container .img-container img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 75%;
 }
 .vegetables-container .products-container .product-container .description {
+  width: 50%;
   display: flex;
+  justify-content: center;
   flex: 1;
   flex-direction: column;
+}
+.vegetables-container .products-container .product-container .description h2 {
+  font-size: 1rem;
+  color: var(--text-primaty_color);
+  margin-bottom: 8px;
+}
+.vegetables-container .products-container .product-container .description .price {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+.vegetables-container .products-container .product-container .description .price h3 {
+  color: var(--text-primaty_color);
+  margin-right: 6px;
+  font-size: 1.2rem;
+}
+.vegetables-container .products-container .product-container .description .price p {
+  color: var(--text-secondary_color);
+  font-size: 0.8rem;
+}
+.vegetables-container .products-container .product-container .description .bottan-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  width: 100%;
+  max-width: 150px;
+}
+.vegetables-container .products-container .product-container .description .bottan-container .favorite-button {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 65px;
+  height: 32px;
+  border: 1px solid rgb(189, 183, 183);
+  border-radius: 6px;
+  padding: 6px;
+}
+.vegetables-container .products-container .product-container .description .bottan-container .favorite-button img {
+  height: 15px;
+}
+.vegetables-container .products-container .product-container .description .bottan-container .buy-button {
+  background-color: #0BCE83;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 65px;
+  height: 32px;
+  cursor: pointer;
+  border-radius: 6px;
+  padding: 6px;
+}
+.vegetables-container .products-container .product-container .description .bottan-container .buy-button img {
+  height: 15px;
+}
+
+.shopPanel-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  height: 50px;
+  z-index: 100;
+}
+.shopPanel-container img {
+  cursor: pointer;
 }/*# sourceMappingURL=vegetables.css.map */
