--- a/Categoris/vegetables/vegetables.scss
+++ b/Categoris/vegetables/vegetables.scss
@@ -1,68 +1,79 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-   }
-   :root{
-
-   --text-primaty_color: #2D0C57;
-   --text-secondary_color: #9586A8;
 }
-   body{
+
+:root {
+
+    --text-primaty_color: #2D0C57;
+    --text-secondary_color: #9586A8;
+}
+
+body {
     width: 100%;
     height: 100vh;
     background-color: #F6F5F5;
-    position: relative;
-    overflow: hidden;
-   }
-   section{
+
+}
+
+section {
     width: 100%;
     height: 100vh;
-   
- }
- .brocoli-container{
+
+}
+
+.brocoli-container {
     position: absolute;
     top: 0;
     right: 0;
     z-index: 1;
-   img{
-    height: 150px;
-    z-index: 1;
-   }
- }
-.vegetables-container{
+
+    img {
+        height: 150px;
+        z-index: 1;
+    }
+}
+
+.vegetables-container {
     position: relative;
     z-index: 100;
-   width: 90%;
-   margin: 0 auto;
-    .back-container{
-       padding-top: 60px;
+    width: 90%;
+    margin: 0 auto;
+
+    .back-container {
+        padding-top: 60px;
         margin-left: 0px;
-        
-        a{
+
+        a {
             text-decoration: none;
             color: black;
         }
     }
-    .title-container{
+
+    .title-container {
         margin-top: 10px;
-        h2{
+
+        h2 {
             color: var(--text-primaty_color);
         }
     }
-    .bar-container{
+
+    .bar-container {
         margin-top: 20px;
         margin-bottom: 40px;
-        
-        form{
+
+        form {
             background-color: white;
-            padding: 8px 10px ;
+            padding: 8px 10px;
             border-radius: 30px;
-            img{
+
+            img {
                 height: 19px;
             }
-            input{
+
+            input {
                 margin-left: 5px;
                 font-size: 1.4rem;
                 width: 80%;
@@ -72,13 +83,14 @@
 
         }
     }
-    .subjects-container{
+
+    .subjects-container {
         min-width: 400px;
         display: flex;
         flex-wrap: wrap;
-       
-        
-        .subject-container{
+
+
+        .subject-container {
             overflow: hidden;
             margin: 5px;
             border-radius: 10px;
@@ -88,37 +100,151 @@
             align-items: center;
             padding: 2px;
             cursor: pointer;
-          
-            h2{
+
+            h2 {
                 padding: 4px;
                 display: flex;
                 font-size: 0.9rem;
                 font-weight: 300;
+                color: var(--text-secondary_color);
+
+            }
+
+            .active {
+                color: rgba(88, 34, 189, 0.808);
+                font-weight: 600;
+
             }
 
         }
-        .active{
-            color: #6C0EE4;
-            background-color:#E2CBFF ;
+
+        .active {
+            color: #533975;
+            background-color: #E2CBFF;
         }
     }
-    .products-container{
+
+    .products-container {
         display: flex;
         flex-direction: column;
-        .product-container{
-            display: flex;
-            margin:  5px;
+        width: 100%;
+        margin-top: 20px;
 
-            .img-container{
+        .product-container {
+            margin-top: 25px;
+            display: flex;
+            width: 100%;
+
+            .img-container {
                 display: flex;
+                justify-content: center;
+                align-items: center;
                 flex: 1;
+                width: 50%;
+
+                img {
+                    object-fit: cover;
+                    height: 75%;
+                }
             }
-            .description{
+
+            .description {
+                width: 50%;
                 display: flex;
+                justify-content: center;
                 flex: 1;
                 flex-direction: column;
+
+                h2 {
+                    font-size: 1rem;
+                    color: var(--text-primaty_color);
+                    margin-bottom: 8px;
+                }
+
+                .price {
+                    display: flex;
+                    align-items: center;
+                    justify-content: start;
+
+                    h3 {
+                        color: var(--text-primaty_color);
+                        margin-right: 6px;
+                        font-size: 1.2rem;
+
+                    }
+
+                    p {
+                        color: var(--text-secondary_color);
+                        font-size: 0.8rem;
+
+
+                    }
+                }
+
+                .bottan-container {
+                    display: flex;
+                    justify-content: space-between;
+                    margin-top: 10px;
+                    width: 100%;
+                    max-width: 150px;
+
+                    .favorite-button {
+                        background-color: white;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 65px;
+                        height: 32px;
+                        border: 1px solid rgb(189, 183, 183);
+                        border-radius: 6px;
+                        padding: 6px;
+
+                        img {
+                            height: 15px;
+                        }
+                    }
+
+                    .buy-button {
+                        background-color: #0BCE83;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 65px;
+                        height: 32px;
+                        cursor: pointer;
+
+                        border-radius: 6px;
+                        padding: 6px;
+
+                        img {
+                            height: 15px;
+                        }
+
+
+                    }
+                }
             }
 
         }
     }
+}
+
+.shopPanel-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    height: 50px;
+    z-index: 100;
+
+    img {
+        cursor: pointer;
+    }
+
+
+
+
 }
