--- a/Categoris/vegetables/Boston/checkout/checkout.css
+++ b/Categoris/vegetables/Boston/checkout/checkout.css
@@ -71,4 +71,244 @@ section {
 }
 .checkout-container .payment-container .card-number p {
   color: var(--text-secondary_color);
+}
+.checkout-container .delivery-contanier {
+  margin-top: 30px;
+}
+.checkout-container .delivery-contanier .delivery-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.checkout-container .delivery-contanier .delivery-title h2 {
+  font-size: 1.2rem;
+  color: var(--text-primaty_color);
+}
+.checkout-container .delivery-contanier .delivery-title p {
+  font-weight: 600;
+  color: var(--selected-violet_color);
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+.checkout-container .delivery-contanier .location {
+  margin-top: 25px;
+  display: flex;
+}
+.checkout-container .delivery-contanier .location ul {
+  margin-left: 14px;
+}
+.checkout-container .delivery-contanier .location ul li {
+  color: var(--text-secondary_color);
+  list-style: none;
+  font-size: 0.9rem;
+  line-height: 20px;
+}
+.checkout-container .delivery-contanier .opction-container {
+  margin-top: 30px;
+}
+.checkout-container .delivery-contanier .opction-container .opction-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.checkout-container .delivery-contanier .opction-container .opction-title h2 {
+  font-size: 1.2rem;
+  color: var(--text-primaty_color);
+}
+.checkout-container .delivery-contanier .opction-container .opction-title p {
+  font-weight: 600;
+  color: var(--selected-violet_color);
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+.checkout-container .delivery-contanier .opction-container .choose-option {
+  margin-top: 15px;
+}
+.checkout-container .delivery-contanier .opction-container .choose-option .opction {
+  display: flex;
+  align-items: center;
+  margin-bottom: 25px;
+  justify-content: space-between;
+}
+.checkout-container .delivery-contanier .opction-container .choose-option .opction .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.checkout-container .delivery-contanier .opction-container .choose-option .opction .container img {
+  margin-right: 20px;
+}
+.checkout-container .delivery-contanier .opction-container .choose-option .opction .container p {
+  color: var(--text-secondary_color);
+}
+.checkout-container .delivery-contanier .opction-container .choose-option .opction .container .pick {
+  color: var(--selected-violet_color);
+  font-weight: 600;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  /* Button 12 */
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container h2 {
+  font-size: 1.2rem;
+  color: var(--text-primaty_color);
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container .toggle-button-cover {
+  display: table-cell;
+  position: relative;
+  width: 100px;
+  height: 40px;
+  box-sizing: border-box;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container .button-cover {
+  border-radius: 4px;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container .button-cover:before {
+  counter-increment: button-counter;
+  content: counter(button-counter);
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  color: #d7e3e3;
+  font-size: 12px;
+  line-height: 1;
+  padding: 5px;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container .button-cover,
+.checkout-container .delivery-contanier .opction-container .non-contact-container .knobs,
+.checkout-container .delivery-contanier .opction-container .non-contact-container .layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container .button {
+  position: relative;
+  top: 50%;
+  width: 74px;
+  height: 36px;
+  margin: -20px auto 0 auto;
+  overflow: hidden;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container .button.r,
+.checkout-container .delivery-contanier .opction-container .non-contact-container .button.r .layer {
+  border-radius: 100px;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container .button.b2 {
+  border-radius: 2px;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container .checkbox {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 3;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container .knobs {
+  z-index: 2;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container .layer {
+  border-radius: 10px;
+  width: 100%;
+  background-color: #E2CBFF;
+  transition: 0.3s ease all;
+  z-index: 1;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs:before,
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs:after,
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span,
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span:before,
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span:after {
+  position: absolute;
+  top: 4px;
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 1;
+  border-radius: 50%;
+  transition: 0.3s ease all;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs:before {
+  content: "YES";
+  left: 4px;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs:after {
+  content: "NO";
+  right: 4px;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs:before,
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs:after {
+  width: 27px;
+  height: 10px;
+  color: var(--selected-violet_color);
+  padding: 9px 3px;
+  z-index: 1;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span {
+  display: inline-block;
+  z-index: 2;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span,
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span:before,
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span:after {
+  width: 20px;
+  height: 10px;
+  padding: 9px 4px;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span:before,
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span:after {
+  content: "";
+  top: 0;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span:before {
+  left: -28px;
+  background-color: #ffffff;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .knobs span:after {
+  right: -52px;
+  background-color: #ffffff;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .checkbox:checked + .knobs span:before {
+  left: 4px;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .checkbox:checked + .knobs span:after {
+  right: -83px;
+}
+.checkout-container .delivery-contanier .opction-container .non-contact-container #button-12 .checkbox:checked ~ .layer {
+  background-color: #E2CBFF;
+}
+
+.shopPanel-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  height: 50px;
+  z-index: 100;
+}
+.shopPanel-container img {
+  cursor: pointer;
+}
+.shopPanel-container .box {
+  position: relative;
+}
+.shopPanel-container .box .product-value {
+  padding: 2px 5px;
+  border-radius: 50%;
+  background-color: #CBF265;
+  position: absolute;
+  right: -4px;
+  bottom: 17px;
+}
+.shopPanel-container .box .product-value p {
+  font-size: 0.7rem;
 }/*# sourceMappingURL=checkout.css.map */
